welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: not found: value a
a==0
^Program:2: error: not found: value buggle
buggle==(3,a)
^Program:2: error: not found: value a
buggle==(3,a)
           ^Program:3: error: not found: value buggle
if (buggle=estFaceMur()){
    ^Program:5: error: not found: value a
  a==a+1
  ^Program:5: error: not found: value a
  a==a+1
     ^Program:8: error: not found: value a
  a==a+1
  ^Program:8: error: not found: value a
  a==a+1
     ^