welcome.lessons.welcome.conditions.Conditions.scala.code
a==0
buggle==(3,a)
if (buggle=estFaceMur()){
  recule();
  a==a+1
} else {
  avance()
  a==a+1
}